--- a/values.yaml
+++ b/values.yaml
@@ -698,11 +698,11 @@ housekeeping:
 
 ###########################################################################
 #
-# Netbox DeploymentConfig
+# Netbox Deployment
 #
 ###########################################################################
 
-deploymentConfig:
+deployment:
   # This options is overrlooked when autoscaling is enable
   replicaCount: 1
 
@@ -989,23 +989,23 @@ worker:
       runAsUser:
       runAsGroup:
 
-      extraEnvs: []
+    extraEnvs: []
 
-      extraVolumeMounts: []
+    extraVolumeMounts: []
 
-      # We usually recommend not to specify default resources and to leave this as a conscious
-      # choice for the user. This also increases chances charts run on environments with little
-      # resources, such as Minikube. If you do want to specify resources, uncomment the following
-      # lines, adjust them as necessary, and remove the curly braces after 'resources:'.
-      resources: {}
-      # limits:
-      #   cpu: 100m
-      #   memory: 128Mi
-      # requests:
-      #   cpu: 100m
-      #   memory: 128Mi
+    # We usually recommend not to specify default resources and to leave this as a conscious
+    # choice for the user. This also increases chances charts run on environments with little
+    # resources, such as Minikube. If you do want to specify resources, uncomment the following
+    # lines, adjust them as necessary, and remove the curly braces after 'resources:'.
+    resources: {}
+    # limits:
+    #   cpu: 100m
+    #   memory: 128Mi
+    # requests:
+    #   cpu: 100m
+    #   memory: 128Mi
 
-      extraContainers: []
+    extraContainers: []
 
   extraVolumes: []
 
