--- a/templates/cronjob.yaml
+++ b/templates/cronjob.yaml
@@ -39,7 +39,7 @@ spec:
             {{- end }}
         spec:
           {{- with .Values.image.imagePullSecrets }}
-          image.imagePullSecrets:
+          imagePullSecrets:
             {{- toYaml . | nindent 12 }}
           {{- end }}
           serviceAccountName: {{ include "netbox.serviceAccountName" . }}
