--- a/templates/migration-confimap.yaml
+++ b/templates/migration-confimap.yaml
@@ -8,7 +8,7 @@ metadata:
     {{- toYaml . | nindent 4 }}
   {{- end }}
   labels:
-    {{ include "netbox.labels" . | indent 4 }}
+    {{- include "netbox.labels" . | nindent 4 }}
 immutable: true
 data:
   entrypoint.sh: |
