--- a/templates/worker-deployment.yaml
+++ b/templates/worker-deployment.yaml
@@ -41,7 +41,7 @@ spec:
         {{- end }}
     spec:
       {{- with .Values.image.imagePullSecrets }}
-      image.imagePullSecrets:
+      imagePullSecrets:
         {{- toYaml . | nindent 8 }}
       {{- end }}
       serviceAccountName: {{ include "netbox.serviceAccountName" . }}
