--- a/values.yaml
+++ b/values.yaml
@@ -73,7 +73,7 @@ image:
   # Overrides the image tag whose default is the chart appVersion.
   tag: ""
 
-  image.imagePullSecrets: []
+  imagePullSecrets: []
 
 
 ###########################################################################
