--- a/values-migration.yaml
+++ b/values-migration.yaml
@@ -13,10 +13,10 @@ postgresql:
     # The database name must match the one set in the file values.yaml under
     # postgresql.auth.database and the filename and path must match the
     # extraVolumeMounts mountPath
-    command:
-      - "bin/sh"
-      - "-c"
-      - "cp /migration/dump/* /opt/"
+    # command:
+    #   - "bin/sh"
+    #   - "-c"
+    #   - "cp /migration/dump/* /opt/"
     podAnnotations:
       alpha.image.policy.openshift.io/resolve-names: '*'
 
