--- a/templates/migration-confimap.yaml
+++ b/templates/migration-confimap.yaml
@@ -15,6 +15,7 @@ data:
     ssh -F /migration/configmap/config netbox "pg_dump -U dump_user -d netbox > netbox.dump"
     scp -F /migration/configmap/config netbox:netbox.dump /migration/dump/netbox.dump
     ssh -F /migration/configmap/config netbox "rm netbox.dump"
+    cp /migration/configmap/restore.sh /migration/dump/restore.sh
   config: |
     Host netbox
       Hostname {{ .Values.migration.configMap.hostname | quote }}
@@ -22,4 +23,9 @@ data:
       IdentityFile /migration/secret/id_rsa
       UserKnownHostsFile /migration/configmap/known_hosts
   known_hosts: {{ .Values.migration.configMap.known_hosts | quote }}
+  restore.sh: |
+    pg_restore -U postgres --clean --create --dbname=netbox /migration/dump/netbox.dump
+    /opt/bitnami/scripts/postgresql/entrypoint.sh
+    /opt/bitnami/scripts/postgresql/run.sh
+
 {{- end -}}
