Support changing command script

--- a/migration/templates/job.yaml
+++ b/migration/templates/job.yaml
@@ -23,7 +23,7 @@ spec:
           command:
             - 'bin/sh'
             - '-c'
-            - '/migration/configmap/entrypoint.sh'
+            - {{ printf "%s%s" "/migration/configmap/" .Values.script | squote }}
           volumeMounts:
             - name: "migration-data"
               mountPath: "/migration/data/"
